# chat2study

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  RELEASE_NOTES_v0.1.0.md  docker-compose.yml  main.py  measure_metrics.sh  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: ci.yml
app/: config.py
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/.cache/artifacts/2ccd37e0-0e08-4578-a2e8-66fce74a97a3/: raw.html  visible_text.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260414_01_init_core_tables.py  20260414_02_add_job_result_payload.py  20260414_03_add_chunks_table.py  20260414_04_add_notes_table.py  20260514_05_add_hashed_password.py
apps/api/app/: main.py
apps/api/app/api/: dependencies.py  router.py
apps/api/app/api/routes/: artifacts.py  auth.py  chats.py  health.py  indexing.py  ingestion.py  jobs.py  notes.py  providers.py  retrieval.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: base.py  models.py  session.py
apps/api/app/schemas/: artifact.py  auth.py  chat.py  indexing.py  job.py  notes.py  provider.py  retrieval.py
apps/api/app/services/: artifact_manager.py  chunking.py  indexing.py  job_runner.py  notes.py  object_storage.py  providers.py  qa.py  retrieval.py
apps/api/app/services/capture/: browser_capture.py  models.py
apps/api/app/workflows/: ingestion_graph.py  ingestion_nodes.py  ingestion_state.py
apps/web/: Dockerfile  middleware.ts  package.json
apps/web/app/: globals.css  layout.tsx  loading.tsx  not-found.tsx  page.tsx
apps/web/app/chats/[chatId]/: loading.tsx  page.tsx
apps/web/app/login/: page.tsx
apps/web/app/register/: page.tsx
apps/web/components/: generate-notes-actions.tsx  ingest-form.tsx  nav.tsx  qa-panel.tsx  study-notes-view.tsx  visual-notes-graph.tsx
apps/web/lib/: api.ts  auth.ts
apps/web/types/: api.ts
docs/: ARCHITECTURE.md
infra/compose/postgres/init/: 001_init.sql
