[project]
name = "chat2study"
version = "0.1.0"
description = "Turn long LLM chats into PDF snapshots, searchable RAG, and study notes."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "jinja2>=3.1.4",
  "python-multipart>=0.0.9",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "playwright>=1.53.0",
  "pymupdf>=1.26.0",
  "sentence-transformers>=3.0.1",
  "numpy>=2.0.1",
  "requests>=2.32.3",
]

[dependency-groups]
dev = ["ruff>=0.5.6", "pytest>=8.3.2", "httpx>=0.27.0"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
