[project]
name = "chat2study-api"
version = "0.1.0"
description = "FastAPI backend for Chat2Study"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.17.0",
  "psycopg[binary]>=3.2.0",
  "pgvector>=0.4.0",
  "langchain>=1.0.0",
  "langgraph>=0.2.0",
  "langchain-openai>=0.3.0",
  "langchain-anthropic>=0.3.0",
  "langchain-google-genai>=2.0.0",
  "langchain-ollama>=0.3.0",
]

[dependency-groups]
dev = ["ruff>=0.6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
